change：修改文件名

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </div>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="demo4.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
