--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>my player</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
         @keyframes spin {
             0% {
@@ -46,7 +46,7 @@
                     </div>
                     <div class="form-group">
                         <label for="addMusicUrlLabel">音乐url</label>
-                        <textarea type="text" class="form-control" id="addMusicUrlLabel">https://mailshark-test.nos-jd.163yun.com/document/static/8F6BEC7E55A47FB37C343FA551592AB2.mp3</textarea>
+                        <textarea type="text" class="form-control" id="addMusicUrlLabel">//mailshark-test.nos-jd.163yun.com/document/static/8F6BEC7E55A47FB37C343FA551592AB2.mp3</textarea>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -87,8 +87,8 @@
             </small>
         </div>
     </div>
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="//cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="index.js"></script>
 </body>
 
