--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             animation-timing-function: linear;
             animation-iteration-count: infinite;
         }
+
+        .progress-bar {
+            transition: none;
+        }
     </style>
 </head>
 
