change:更改图片资源

--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
 
 <body>
     <div class="container">
-        <div class="my-3 p-3 bg-white">
+        <div class="my-3 p-3">
             <div class="progress" style="height: 5px;">
-                <div id="musicProgressbar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="25" aria-valuemin="0"
-                    aria-valuemax="100"></div>
+                <div id="musicProgressbar" class="progress-bar" style="width: 0%;"></div>
             </div>
             <small class="d-block">
                 <span id="musicPlayedTime">00:00</span> /
@@ -46,7 +45,7 @@
                 <span id="musicName"></span>
             </small>
         </div>
-        <div class="my-3 p-3 bg-white">
+        <div class="my-3 p-3">
             <h6 class="border-bottom pb-2 mb-0">Musics</h6>
             <div id="musicList" style="cursor: pointer;">
             </div>
