--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>我最爱的歌单</title>
+    <title>好听的歌单</title>
     <meta charset="utf-8" />
+    <meta name="keywords" content="分享喜欢的歌单" />
+    <meta name="description" content="分享喜欢的歌单" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link href="//cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
